@@ -4,6 +4,7 @@ from StringIO import StringIO
 from plone.portlets.interfaces import IPortletAssignmentMapping
 from plone.portlets.interfaces import IPortletManager
 from plone.app.openid.portlets.login import Assignment as LoginAssignment
+from plone.app.openid.upgrades import update_property_usernames
 from Products.CMFCore.utils import getToolByName
 from Products.PlonePAS.browser.info import PASInfoView
 
@@ -59,4 +60,4 @@ def importVarious(context):
         activatePlugin(site, out, "openid")
 
     addLoginPortlet(site, out)
-
+    update_property_usernames(context)
